bindings/c/whiteout_m2.h

typedef struct whiteout_M2GlobalSequence whiteout_M2GlobalSequence;
typedef struct whiteout_M2Sequence whiteout_M2Sequence;
typedef struct whiteout_M2PhysicsBody whiteout_M2PhysicsBody;
typedef struct whiteout_M2PhysicsShape whiteout_M2PhysicsShape;
typedef struct whiteout_M2BoxShape whiteout_M2BoxShape;
typedef struct whiteout_M2CapsuleShape whiteout_M2CapsuleShape;
typedef struct whiteout_M2SphereShape whiteout_M2SphereShape;
typedef struct whiteout_M2PolytopeShape whiteout_M2PolytopeShape;
typedef struct whiteout_M2PhysicsJoint whiteout_M2PhysicsJoint;
typedef struct whiteout_M2WeldJoint whiteout_M2WeldJoint;
typedef struct whiteout_M2SphericalJoint whiteout_M2SphericalJoint;
typedef struct whiteout_M2ShoulderJoint whiteout_M2ShoulderJoint;
typedef struct whiteout_M2PrismaticJoint whiteout_M2PrismaticJoint;
typedef struct whiteout_M2RevoluteJoint whiteout_M2RevoluteJoint;
typedef struct whiteout_M2DistanceJoint whiteout_M2DistanceJoint;
typedef struct whiteout_M2PhysicsTuning whiteout_M2PhysicsTuning;
typedef struct whiteout_M2PhysicsUnknownChunk whiteout_M2PhysicsUnknownChunk;
typedef struct whiteout_M2PhysicsData whiteout_M2PhysicsData;
typedef struct whiteout_M2BoneOverride whiteout_M2BoneOverride;
typedef struct whiteout_M2BoneOverrideSet whiteout_M2BoneOverrideSet;
typedef struct whiteout_M2Model whiteout_M2Model;
float whiteout_m2_M2PrismaticJoint_get_maxMotorForce(const whiteout_M2PrismaticJoint* self);
void whiteout_m2_M2PrismaticJoint_set_maxMotorForce(whiteout_M2PrismaticJoint* self, float value);
/* Unidentified; zero in all twelve. */
float whiteout_m2_M2PrismaticJoint_get_unknown70(const whiteout_M2PrismaticJoint* self);
void whiteout_m2_M2PrismaticJoint_set_unknown70(whiteout_M2PrismaticJoint* self, float value);
uint32_t whiteout_m2_M2PrismaticJoint_get_motorMode(const whiteout_M2PrismaticJoint* self);
void whiteout_m2_M2PrismaticJoint_set_motorMode(whiteout_M2PrismaticJoint* self, uint32_t value);
/* PRS2 */
float whiteout_m2_M2PrismaticJoint_get_motorFrequencyHz(const whiteout_M2PrismaticJoint* self);
void whiteout_m2_M2PrismaticJoint_set_motorFrequencyHz(whiteout_M2PrismaticJoint* self, float value);
/* PRS2 */
float whiteout_m2_M2PrismaticJoint_get_motorDampingRatio(const whiteout_M2PrismaticJoint* self);
void whiteout_m2_M2PrismaticJoint_set_motorDampingRatio(whiteout_M2PrismaticJoint* self, float value);
/* ── M2RevoluteJoint ─────────────────────────────────────────────── */

/* REVJ/REV2 — a hinge, version 2+. */
whiteout_M2RevoluteJoint* whiteout_m2_M2RevoluteJoint_new(void);
void whiteout_m2_M2RevoluteJoint_delete(whiteout_M2RevoluteJoint* self);
float whiteout_m2_M2RevoluteJoint_get_lowerAngle(const whiteout_M2RevoluteJoint* self);
void whiteout_m2_M2RevoluteJoint_set_lowerAngle(whiteout_M2RevoluteJoint* self, float value);
float whiteout_m2_M2RevoluteJoint_get_upperAngle(const whiteout_M2RevoluteJoint* self);
void whiteout_m2_M2RevoluteJoint_set_upperAngle(whiteout_M2RevoluteJoint* self, float value);
float whiteout_m2_M2RevoluteJoint_get_maxMotorTorque(const whiteout_M2RevoluteJoint* self);
void whiteout_m2_M2RevoluteJoint_set_maxMotorTorque(whiteout_M2RevoluteJoint* self, float value);
/* 1: position mode (frequency > 0), 2: velocity mode. */
uint32_t whiteout_m2_M2RevoluteJoint_get_motorMode(const whiteout_M2RevoluteJoint* self);
void whiteout_m2_M2RevoluteJoint_set_motorMode(whiteout_M2RevoluteJoint* self, uint32_t value);
/* REV2 */
float whiteout_m2_M2RevoluteJoint_get_motorFrequencyHz(const whiteout_M2RevoluteJoint* self);
void whiteout_m2_M2RevoluteJoint_set_motorFrequencyHz(whiteout_M2RevoluteJoint* self, float value);
/* REV2 */
float whiteout_m2_M2RevoluteJoint_get_motorDampingRatio(const whiteout_M2RevoluteJoint* self);
void whiteout_m2_M2RevoluteJoint_set_motorDampingRatio(whiteout_M2RevoluteJoint* self, float value);
/* ── M2DistanceJoint ─────────────────────────────────────────────── */

/* DSTJ — holds two anchors a fixed distance apart, version 2+. */
whiteout_M2DistanceJoint* whiteout_m2_M2DistanceJoint_new(void);
void whiteout_m2_M2DistanceJoint_delete(whiteout_M2DistanceJoint* self);
whiteout_Vector3f* whiteout_m2_M2DistanceJoint_get_localAnchorA(whiteout_M2DistanceJoint* self);
void whiteout_m2_M2DistanceJoint_set_localAnchorA(whiteout_M2DistanceJoint* self, const whiteout_Vector3f* value);
whiteout_Vector3f* whiteout_m2_M2DistanceJoint_get_localAnchorB(whiteout_M2DistanceJoint* self);
void whiteout_m2_M2DistanceJoint_set_localAnchorB(whiteout_M2DistanceJoint* self, const whiteout_Vector3f* value);
float whiteout_m2_M2DistanceJoint_get_distance(const whiteout_M2DistanceJoint* self);
void whiteout_m2_M2DistanceJoint_set_distance(whiteout_M2DistanceJoint* self, float value);
/* ── M2PhysicsTuning ─────────────────────────────────────────────── */

/* PHYV — six floats that overwrite the head of a tuning block the client otherwise fills with constants. Version 1+. */
whiteout_M2PhysicsTuning* whiteout_m2_M2PhysicsTuning_new(void);
void whiteout_m2_M2PhysicsTuning_delete(whiteout_M2PhysicsTuning* self);
/* ── M2PhysicsUnknownChunk ─────────────────────────────────────────────── */

/* A `.phys` chunk this library does not know, kept verbatim so a parse/write cycle does not drop it. */
whiteout_M2PhysicsUnknownChunk* whiteout_m2_M2PhysicsUnknownChunk_new(void);
void whiteout_m2_M2PhysicsUnknownChunk_delete(whiteout_M2PhysicsUnknownChunk* self);
/* ── M2PhysicsData ─────────────────────────────────────────────── */

/* A whole `.phys` file — Blizzard's Domino rigid-body setup for a model, either a `.phys` sibling or an M2's inline PFDC chunk. */
/*  */
/* Bodies attach to bones and are linked by joints; each body owns a run of @ref shapes, and each shape indexes the array its type names. */
whiteout_M2PhysicsData* whiteout_m2_M2PhysicsData_new(void);
void whiteout_m2_M2PhysicsData_delete(whiteout_M2PhysicsData* self);
/* 0 (MoP) through 6. Decides which layout each chunk is written in — see the per-field version notes on the structs above. */
uint16_t whiteout_m2_M2PhysicsData_get_version(const whiteout_M2PhysicsData* self);
void whiteout_m2_M2PhysicsData_set_version(whiteout_M2PhysicsData* self, uint16_t value);
size_t whiteout_m2_M2PhysicsData_get_bodies_count(const whiteout_M2PhysicsData* self);
whiteout_M2PhysicsBody* whiteout_m2_M2PhysicsData_get_bodies_at(whiteout_M2PhysicsData* self, size_t index);
size_t whiteout_m2_M2PhysicsData_get_shapes_count(const whiteout_M2PhysicsData* self);
whiteout_M2PhysicsShape* whiteout_m2_M2PhysicsData_get_shapes_at(whiteout_M2PhysicsData* self, size_t index);
size_t whiteout_m2_M2PhysicsData_get_boxShapes_count(const whiteout_M2PhysicsData* self);
whiteout_M2BoxShape* whiteout_m2_M2PhysicsData_get_boxShapes_at(whiteout_M2PhysicsData* self, size_t index);
size_t whiteout_m2_M2PhysicsData_get_capsuleShapes_count(const whiteout_M2PhysicsData* self);
whiteout_M2CapsuleShape* whiteout_m2_M2PhysicsData_get_capsuleShapes_at(whiteout_M2PhysicsData* self, size_t index);
size_t whiteout_m2_M2PhysicsData_get_sphereShapes_count(const whiteout_M2PhysicsData* self);
whiteout_M2SphereShape* whiteout_m2_M2PhysicsData_get_sphereShapes_at(whiteout_M2PhysicsData* self, size_t index);
size_t whiteout_m2_M2PhysicsData_get_polytopeShapes_count(const whiteout_M2PhysicsData* self);
whiteout_M2PolytopeShape* whiteout_m2_M2PhysicsData_get_polytopeShapes_at(whiteout_M2PhysicsData* self, size_t index);
size_t whiteout_m2_M2PhysicsData_get_joints_count(const whiteout_M2PhysicsData* self);
whiteout_M2PhysicsJoint* whiteout_m2_M2PhysicsData_get_joints_at(whiteout_M2PhysicsData* self, size_t index);
size_t whiteout_m2_M2PhysicsData_get_weldJoints_count(const whiteout_M2PhysicsData* self);
whiteout_M2WeldJoint* whiteout_m2_M2PhysicsData_get_weldJoints_at(whiteout_M2PhysicsData* self, size_t index);
size_t whiteout_m2_M2PhysicsData_get_sphericalJoints_count(const whiteout_M2PhysicsData* self);
whiteout_M2SphericalJoint* whiteout_m2_M2PhysicsData_get_sphericalJoints_at(whiteout_M2PhysicsData* self, size_t index);
size_t whiteout_m2_M2PhysicsData_get_shoulderJoints_count(const whiteout_M2PhysicsData* self);
whiteout_M2ShoulderJoint* whiteout_m2_M2PhysicsData_get_shoulderJoints_at(whiteout_M2PhysicsData* self, size_t index);
size_t whiteout_m2_M2PhysicsData_get_prismaticJoints_count(const whiteout_M2PhysicsData* self);
whiteout_M2PrismaticJoint* whiteout_m2_M2PhysicsData_get_prismaticJoints_at(whiteout_M2PhysicsData* self, size_t index);
size_t whiteout_m2_M2PhysicsData_get_revoluteJoints_count(const whiteout_M2PhysicsData* self);
whiteout_M2RevoluteJoint* whiteout_m2_M2PhysicsData_get_revoluteJoints_at(whiteout_M2PhysicsData* self, size_t index);
size_t whiteout_m2_M2PhysicsData_get_distanceJoints_count(const whiteout_M2PhysicsData* self);
whiteout_M2DistanceJoint* whiteout_m2_M2PhysicsData_get_distanceJoints_at(whiteout_M2PhysicsData* self, size_t index);
/* PHYV. A file that has one carries nothing else. */
size_t whiteout_m2_M2PhysicsData_get_tuning_count(const whiteout_M2PhysicsData* self);
whiteout_M2PhysicsTuning* whiteout_m2_M2PhysicsData_get_tuning_at(whiteout_M2PhysicsData* self, size_t index);
/* ── M2BoneOverride ─────────────────────────────────────────────── */

/* One bone's replacement transform, from a `.bone` file. */
whiteout_M2BoneOverride* whiteout_m2_M2BoneOverride_new(void);
void whiteout_m2_M2BoneOverride_delete(whiteout_M2BoneOverride* self);
/* Indexes Model::bones. Every id in the WoW corpus is below its model's bone count, and the ids within a file are strictly ascending. */
uint16_t whiteout_m2_M2BoneOverride_get_boneIndex(const whiteout_M2BoneOverride* self);
void whiteout_m2_M2BoneOverride_set_boneIndex(whiteout_M2BoneOverride* self, uint16_t value);
/* ── M2BoneOverrideSet ─────────────────────────────────────────────── */

/* A whole `.bone` file: the skeleton edits one customization choice needs. */
/*  */
/* On disk this is two parallel chunks — `BIDA` holds the bone ids and `BOMT` the matrices — but their lengths match in every corpus file, so they are paired here and split again on write. */
whiteout_M2BoneOverrideSet* whiteout_m2_M2BoneOverrideSet_new(void);
void whiteout_m2_M2BoneOverrideSet_delete(whiteout_M2BoneOverrideSet* self);
/* 1 in every known file. */
uint32_t whiteout_m2_M2BoneOverrideSet_get_version(const whiteout_M2BoneOverrideSet* self);
void whiteout_m2_M2BoneOverrideSet_set_version(whiteout_M2BoneOverrideSet* self, uint32_t value);
/* Ascending by @ref BoneOverride::boneIndex, which is the order the files store and what lets the client binary-search a bone. */
size_t whiteout_m2_M2BoneOverrideSet_get_overrides_count(const whiteout_M2BoneOverrideSet* self);
whiteout_M2BoneOverride* whiteout_m2_M2BoneOverrideSet_get_overrides_at(whiteout_M2BoneOverrideSet* self, size_t index);
/* ── M2Model ─────────────────────────────────────────────── */

whiteout_M2Model* whiteout_m2_M2Model_new(void);
void whiteout_m2_M2Model_delete(whiteout_M2Model* self);
whiteout_CString whiteout_m2_M2Model_get_modelName(const whiteout_M2Model* self);
void whiteout_m2_M2Model_set_modelName(whiteout_M2Model* self, const char* value);
size_t whiteout_m2_M2Model_get_globalLoops_count(const whiteout_M2Model* self);
whiteout_M2GlobalSequence* whiteout_m2_M2Model_get_globalLoops_at(whiteout_M2Model* self, size_t index);
size_t whiteout_m2_M2Model_get_sequences_count(const whiteout_M2Model* self);
whiteout_M2Sequence* whiteout_m2_M2Model_get_sequences_at(whiteout_M2Model* self, size_t index);