bindings/csharp/Whiteout/M2/NativeMethods.M2.cs


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m2_M2PrismaticJoint_get_maxMotorForce(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2PrismaticJoint_set_maxMotorForce(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m2_M2PrismaticJoint_get_unknown70(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2PrismaticJoint_set_unknown70(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m2_M2PrismaticJoint_get_motorMode(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2PrismaticJoint_set_motorMode(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m2_M2PrismaticJoint_get_motorFrequencyHz(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2PrismaticJoint_set_motorFrequencyHz(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m2_M2PrismaticJoint_get_motorDampingRatio(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2PrismaticJoint_set_motorDampingRatio(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2RevoluteJoint_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2RevoluteJoint_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m2_M2RevoluteJoint_get_lowerAngle(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2RevoluteJoint_set_lowerAngle(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m2_M2RevoluteJoint_get_upperAngle(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2RevoluteJoint_set_upperAngle(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m2_M2RevoluteJoint_get_maxMotorTorque(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2RevoluteJoint_set_maxMotorTorque(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m2_M2RevoluteJoint_get_motorMode(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2RevoluteJoint_set_motorMode(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m2_M2RevoluteJoint_get_motorFrequencyHz(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2RevoluteJoint_set_motorFrequencyHz(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m2_M2RevoluteJoint_get_motorDampingRatio(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2RevoluteJoint_set_motorDampingRatio(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2DistanceJoint_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2DistanceJoint_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2DistanceJoint_get_localAnchorA(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2DistanceJoint_set_localAnchorA(IntPtr self, IntPtr value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2DistanceJoint_get_localAnchorB(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2DistanceJoint_set_localAnchorB(IntPtr self, IntPtr value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m2_M2DistanceJoint_get_distance(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2DistanceJoint_set_distance(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2PhysicsTuning_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2PhysicsTuning_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2PhysicsUnknownChunk_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2PhysicsUnknownChunk_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2PhysicsData_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2PhysicsData_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial ushort whiteout_m2_M2PhysicsData_get_version(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2PhysicsData_set_version(IntPtr self, ushort value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial nuint whiteout_m2_M2PhysicsData_get_bodies_count(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2PhysicsData_get_bodies_at(IntPtr self, nuint index);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial nuint whiteout_m2_M2PhysicsData_get_shapes_count(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2PhysicsData_get_shapes_at(IntPtr self, nuint index);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial nuint whiteout_m2_M2PhysicsData_get_boxShapes_count(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2PhysicsData_get_boxShapes_at(IntPtr self, nuint index);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial nuint whiteout_m2_M2PhysicsData_get_capsuleShapes_count(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2PhysicsData_get_capsuleShapes_at(IntPtr self, nuint index);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial nuint whiteout_m2_M2PhysicsData_get_sphereShapes_count(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2PhysicsData_get_sphereShapes_at(IntPtr self, nuint index);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial nuint whiteout_m2_M2PhysicsData_get_polytopeShapes_count(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2PhysicsData_get_polytopeShapes_at(IntPtr self, nuint index);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial nuint whiteout_m2_M2PhysicsData_get_joints_count(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2PhysicsData_get_joints_at(IntPtr self, nuint index);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial nuint whiteout_m2_M2PhysicsData_get_weldJoints_count(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2PhysicsData_get_weldJoints_at(IntPtr self, nuint index);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial nuint whiteout_m2_M2PhysicsData_get_sphericalJoints_count(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2PhysicsData_get_sphericalJoints_at(IntPtr self, nuint index);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial nuint whiteout_m2_M2PhysicsData_get_shoulderJoints_count(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2PhysicsData_get_shoulderJoints_at(IntPtr self, nuint index);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial nuint whiteout_m2_M2PhysicsData_get_prismaticJoints_count(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2PhysicsData_get_prismaticJoints_at(IntPtr self, nuint index);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial nuint whiteout_m2_M2PhysicsData_get_revoluteJoints_count(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2PhysicsData_get_revoluteJoints_at(IntPtr self, nuint index);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial nuint whiteout_m2_M2PhysicsData_get_distanceJoints_count(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2PhysicsData_get_distanceJoints_at(IntPtr self, nuint index);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial nuint whiteout_m2_M2PhysicsData_get_tuning_count(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2PhysicsData_get_tuning_at(IntPtr self, nuint index);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2BoneOverride_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2BoneOverride_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial ushort whiteout_m2_M2BoneOverride_get_boneIndex(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2BoneOverride_set_boneIndex(IntPtr self, ushort value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2BoneOverrideSet_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2BoneOverrideSet_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m2_M2BoneOverrideSet_get_version(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2BoneOverrideSet_set_version(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial nuint whiteout_m2_M2BoneOverrideSet_get_overrides_count(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2BoneOverrideSet_get_overrides_at(IntPtr self, nuint index);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2Model_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2Model_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeCString whiteout_m2_M2Model_get_modelName(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m2_M2Model_set_modelName(IntPtr self, [MarshalAs(UnmanagedType.LPUTF8Str)] string value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial nuint whiteout_m2_M2Model_get_globalLoops_count(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2Model_get_globalLoops_at(IntPtr self, nuint index);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial nuint whiteout_m2_M2Model_get_sequences_count(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m2_M2Model_get_sequences_at(IntPtr self, nuint index);

